Fixed footer alignment issue

--- a/src/scss/base/scaffolding.scss
+++ b/src/scss/base/scaffolding.scss
@@ -39,9 +39,9 @@ img {
 }
 
 .table {
-  padding: 0 0 0 65px;
+  padding: 0 0 0 25px;
 }
 
 #EntryCount {
-  padding: 0px 0px 15px 76px;
+  padding: 0px 0px 15px 36px;
 }
