--- a/src/scss/containers/landing.scss
+++ b/src/scss/containers/landing.scss
@@ -8,7 +8,7 @@ $landing-gradient-hover: linear-gradient(228deg, darken(rgba(127, 244, 222, 0.95
   font-family: 'Poppins', sans-serif;
   width: 100%;
   height: 100%;
-  background: #ffffff;
+  background: #e0e0e0;
   position: absolute;
   z-index: 0;
   overflow-x: hidden;
@@ -810,6 +810,7 @@ $landing-gradient-hover: linear-gradient(228deg, darken(rgba(127, 244, 222, 0.95
 .landing__footer {
   text-align: center;
   position: relative;
+  background: #fff;
   height: 50px; 
 
   a {
